feat: consul, welcome back !!! (#57)
* feat: consul, welcome back git add .!

* chore: remove annoying console log

* fix: remove space

* fix: golint
